all page options by post type, fix kadense z-index, remove genesis page toggle

--- a/sass/supporting/custom-style.scss
+++ b/sass/supporting/custom-style.scss
@@ -614,6 +614,10 @@ body .site-header .navbar {
     max-width: 100%;
 }
 
+.site-inner .kt-row-column-wrap {
+    z-index: 0;
+}
+
 .gbs-modular-content .site-inner .content-sidebar-wrap .jma-gbs-inner {
     padding: 10px;
 }
